Moved LED files a little bit
Related to #14

--- a/blinky/Makefile
+++ b/blinky/Makefile
@@ -65,13 +65,13 @@ SRC_FILES += \
   $(SDK_ROOT)/external/fprintf/nrf_fprintf_format.c \
   $(SDK_ROOT)/external/utf_converter/utf.c \
   $(PROJ_DIR)/main.c \
-  $(PROJ_DIR)/modules/led.c \
+  $(PROJ_DIR)/modules/led/led.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
   $(PROJ_DIR) \
   ./config \
-  ./modules \
+  $(PROJ_DIR)/modules/led \
   $(SDK_ROOT)/components/libraries/fifo \
   $(SDK_ROOT)/components/libraries/pwm \
   $(SDK_ROOT)/components/libraries/usbd/class/cdc/acm \
