Added color library
Related to #17

--- a/blinky/Makefile
+++ b/blinky/Makefile
@@ -68,6 +68,7 @@ SRC_FILES += \
   $(PROJ_DIR)/modules/button/button.c \
   $(PROJ_DIR)/modules/pwm/pwm.c \
   $(PROJ_DIR)/modules/log/log.c \
+  $(PROJ_DIR)/modules/color/color.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
@@ -77,6 +78,7 @@ INC_FOLDERS += \
   $(PROJ_DIR)/modules/button \
   $(PROJ_DIR)/modules/pwm \
   $(PROJ_DIR)/modules/log \
+  $(PROJ_DIR)/modules/color \
   $(SDK_ROOT)/components/libraries/fifo \
   $(SDK_ROOT)/components/libraries/pwm \
   $(SDK_ROOT)/components/libraries/usbd/class/cdc/acm \
