Added module for ROM
Related to #19

--- a/blinky/Makefile
+++ b/blinky/Makefile
@@ -70,6 +70,7 @@ SRC_FILES += \
   $(PROJ_DIR)/modules/log/log.c \
   $(PROJ_DIR)/modules/color/color.c \
   $(PROJ_DIR)/modules/helpers/helpers.c \
+  $(PROJ_DIR)/modules/rom/rom.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
@@ -81,6 +82,7 @@ INC_FOLDERS += \
   $(PROJ_DIR)/modules/log \
   $(PROJ_DIR)/modules/color \
   $(PROJ_DIR)/modules/helpers \
+  $(PROJ_DIR)/modules/rom \
   $(SDK_ROOT)/components/libraries/fifo \
   $(SDK_ROOT)/components/libraries/pwm \
   $(SDK_ROOT)/components/libraries/usbd/class/cdc/acm \
