--- a/blinky/Makefile
+++ b/blinky/Makefile
@@ -70,6 +70,7 @@ SRC_FILES += \
   $(PROJ_DIR)/modules/log/log.c \
   $(PROJ_DIR)/modules/color/color.c \
   $(PROJ_DIR)/modules/helpers/helpers.c \
+  $(SDK_ROOT)/modules/nrfx/hal/nrf_nvmc.c \
   $(PROJ_DIR)/modules/rom/rom.c \
 
 # Include folders common to all targets
