Renamed ROM to FLASh
Related to #20

--- a/blinky/Makefile
+++ b/blinky/Makefile
@@ -71,7 +71,7 @@ SRC_FILES += \
   $(PROJ_DIR)/modules/color/color.c \
   $(PROJ_DIR)/modules/helpers/helpers.c \
   $(SDK_ROOT)/modules/nrfx/hal/nrf_nvmc.c \
-  $(PROJ_DIR)/modules/rom/rom.c \
+  $(PROJ_DIR)/modules/flash/flash.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
@@ -83,7 +83,7 @@ INC_FOLDERS += \
   $(PROJ_DIR)/modules/log \
   $(PROJ_DIR)/modules/color \
   $(PROJ_DIR)/modules/helpers \
-  $(PROJ_DIR)/modules/rom \
+  $(PROJ_DIR)/modules/flash \
   $(SDK_ROOT)/components/libraries/fifo \
   $(SDK_ROOT)/components/libraries/pwm \
   $(SDK_ROOT)/components/libraries/usbd/class/cdc/acm \
